--- a/modules/custom/quizz/quizz.links.menu.yml
+++ b/modules/custom/quizz/quizz.links.menu.yml
@@ -2,7 +2,7 @@ quizz.overview:
   title: 'Quizz'
   description: 'Administer quizz overview'
   route_name: quizz.overview
-  parent: system.admin_reports
+  parent: system.admin_content
   weight: 0
 quizz.answer:
   title: 'Answers'
@@ -16,9 +16,3 @@ quizz.question:
   route_name: quizz.question.overview
   parent: quizz.overview
   weight: -1
-quizz.results:
-  title: 'Results'
-  description: 'Administer quizz'
-  route_name: quizz.question.overview
-  parent: quizz.overview
-  weight: -1  
