--- a/modules/custom/search_autocomplete/search_autocomplete.info.yml
+++ b/modules/custom/search_autocomplete/search_autocomplete.info.yml
@@ -3,3 +3,6 @@ description: Search autocomplete module
 package: Custom
 type: module
 core: 8.x
+
+'interface translation project': search_autocomplete
+'interface translation server pattern': 'modules/custom/search_autocomplete/translations/fr.po'
