--- a/modules/custom/match_point/match_point.routing.yml
+++ b/modules/custom/match_point/match_point.routing.yml
@@ -20,3 +20,25 @@ match_point.user.delete:
     _title: 'Match point User delete'
   requirements:
     _permission: 'administer match_point' 
+match_point.level.overview:
+  path: '/admin/match_point/levels'
+  defaults:
+    _controller: '\Drupal\match_point\Controller\LevelController::overview'
+    _title: 'Levels'
+  requirements:
+    _permission: 'administer match_point'
+match_point.level.edit:
+  path: '/admin/match_point/level/edit/{id}'
+  defaults:
+    _form: '\Drupal\match_point\Form\Level\EditForm'
+    _title: 'Match point User edit'
+    id: null
+  requirements:
+    _permission: 'administer match_point'
+match_point.level.delete:
+  path: '/admin/match_point/level/delete/{id}'
+  defaults:
+    _form: '\Drupal\match_point\Form\Level\DeleteForm'
+    _title: 'Match point User delete'
+  requirements:
+    _permission: 'administer match_point' 
