--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "composer/installers": "^1.2",
+        "drupal/adsense": "^1.2",
         "drupal/back_to_top": "^1.1",
         "drupal/better_search": "^1.5",
         "drupal/captcha": "^1.1",
@@ -28,20 +29,21 @@
         "drupal/editor_advanced_link": "^1.8",
         "drupal/eu_cookie_compliance": "^1.14",
         "drupal/google_analytics": "^2.5",
+        "drupal/mailsystem": "^4.1",
         "drupal/menu_breadcrumb": "^1.14",
         "drupal/metatag": "^1.15",
+        "drupal/mimemail": "1.x-dev@dev",
+        "drupal/phpmailer_smtp": "^2.0",
         "drupal/protected_pages": "^1.3",
         "drupal/recaptcha": "^2.5",
         "drupal/search_exclude": "^1.2",
         "drupal/share_everywhere": "^1.30",
+        "drupal/simplenews": "^1.0",
         "drupal/sitemap": "^1.5",
+        "drupal/smtp": "^1.0",
         "drupal/superfish": "^1.4",
         "drupal/token": "^1.9",
-        "drush/drush": "^10.3",
-        "drupal/mailsystem": "^4.3",
-        "drupal/phpmailer_smtp": "^2.0",
-        "drupal/smtp": "^1.0",
-        "drupal/adsense":"^1.2"
+        "drush/drush": "^10.3"
     },
     "conflict": {
         "drupal/drupal": "*"
