Add some upgrade to quizz module

--- a/modules/custom/quizz/quizz.info.yml
+++ b/modules/custom/quizz/quizz.info.yml
@@ -4,3 +4,6 @@ package: Custom
 
 type: module
 core: 8.x
+
+'interface translation project': quizz
+'interface translation server pattern': 'modules/custom/quizz/translations/fr.po'
