--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "drupal/smtp": "^1.0",
         "drupal/superfish": "^1.4",
         "drupal/token": "^1.9",
+        "drupal/webform": "^5.25",
         "drush/drush": "^10.3"
     },
     "conflict": {
