group custom module in custom tab

--- a/modules/custom/match_point/match_point.links.menu.yml
+++ b/modules/custom/match_point/match_point.links.menu.yml
@@ -2,7 +2,7 @@ match_point.overview:
   title: 'Match point'
   description: 'Administer Match points'
   route_name: match_point.overview
-  parent: system.admin_content
+  parent: rcowebdev.custom
   weight: -1
 
 match_point.level:
