--- a/modules/custom/poll/poll.links.menu.yml
+++ b/modules/custom/poll/poll.links.menu.yml
@@ -14,5 +14,5 @@ poll.question:
   title: 'Poll'
   description: 'Administer Polls'
   route_name: poll.question.overview
-  parent: system.admin_reports
+  parent: rcowebdev.custom
   weight: -1
