--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "composer/installers": "^1.2",
+        "drupal/admin_toolbar": "^2.4",
         "drupal/adsense": "^1.2",
         "drupal/back_to_top": "^1.1",
         "drupal/better_search": "^1.5",
@@ -26,6 +27,7 @@
         "drupal/core-recommended": "^8.8",
         "drupal/core-vendor-hardening": "^8.8",
         "drupal/ctools": "^3.6",
+        "drupal/devel": "^2.1",
         "drupal/editor_advanced_link": "^1.8",
         "drupal/eu_cookie_compliance": "^1.14",
         "drupal/google_analytics": "^2.5",
@@ -38,6 +40,7 @@
         "drupal/recaptcha": "^2.5",
         "drupal/search_exclude": "^1.2",
         "drupal/share_everywhere": "^1.30",
+        "drupal/simple_sitemap": "^3.10",
         "drupal/simplenews": "^1.0",
         "drupal/sitemap": "^1.5",
         "drupal/smtp": "^1.0",
